Fix usage visualization restarting on mobile when toggling configure mode
The animation effect depended on widget width from WidgetWidthContext.
On mobile, toggling configure mode changes the width (due to the border
on DraggableWidget), causing the entire simulation to rebuild from
scratch. Fix by using a fixed canvas resolution (GRID_SIZE * RENDER_SCALE)
and letting CSS scale the canvas to fill the widget.

--- a/app/javascript/stylesheets/dashboards.scss
+++ b/app/javascript/stylesheets/dashboards.scss
@@ -137,6 +137,9 @@
 .fpc-usage-visualization {
   &__canvas {
     display: block;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1;
   }
 
   &__empty {
